# sereneShell

./: .bashrc  .gitignore  LICENSE  README.md  packages.txt  starship.toml
.config/: starship.toml  wayfire.ini
.config/Thunar/: accels.scm  uca.xml
.config/ags/: .gitignore  app.tsx  teste.tsx
.config/anyrun/: config.ron  style.css
.config/cava/: config
.config/fastfetch/: config.jsonc
.config/fuzzel/: fuzzel.ini
.config/gtk-3.0/: bookmarks  colors.css  settings.ini
.config/gtk-4.0/: colors.css  settings.ini
.config/gtklock/: colors.css  config.ini  style.css
.config/hypr/: hyprland.conf  (+2 more)
ags/: .gitignore  ags-shell  app.ts  app.tsx
fastfetch/: config.jsonc
foot/: .gitignore  foot.ini
gtk-3.0/: bookmarks  settings.ini
gtk-4.0/: assets  gtk-dark.css  gtk.css  settings.ini
hypr/: hypridle.conf  hyprland.conf  hyprland.conf.save  hyprlock.conf  monitors.conf  workspaces.conf
mako/: config
org.keshavnrj.ubuntu/: WhatSie.conf
qt5ct/: qt5ct.conf
qt6ct/: qt6ct.conf
scripts/: install.sh
src/.config/ags/: .gitignore  app.tsx  meson.build  sereneShell  tsconfig.json
src/.config/ags/modules/: AudioControl.tsx  Cava.tsx  ControlMenu.tsx  SystemMonitor.tsx  SystemTray.tsx  WallpaperSwitcher.tsx  Workspaces.tsx  index.tsx
src/.config/ags/services/: Awww.ts  Image.ts  Settings.ts  SystemMonitor.ts  Tray.ts  Wallpapers.ts  WirePumbler.ts  index.ts
src/.config/ags/services/Compositors/: Niri.ts
src/.config/ags/services/Compositors/types/: Client.ts  Workspace.ts  index.ts
src/.config/ags/styles/: _AudioControl.scss  _ControlMenu.scss  _SystemMonitor.scss  _SystemTray.scss  _WallpaperSwitcher.scss  _Workspaces.scss
src/.config/ags/styles/common/: _Font.scss  _Layout.scss  _Palette.scss  _Transitions.scss
src/.config/ags/widgets/: Bar.tsx  index.tsx
src/.config/serene-shell/src/: App.vala  meson.build  serene-shell.gresource.xml
src/.config/serene-shell/src/blueprints/: meson.build
src/.config/serene-shell/src/blueprints/modules/: Audio.blp  Battery.blp  Cava.blp  Client.blp  Clock.blp  Mpris.blp  Player.blp  QuickSettings.blp  Tray.blp  Workspace.blp  Workspaces.blp  meson.build
src/.config/serene-shell/src/blueprints/widgets/: BackgroundPlayer.blp  Bar.blp  meson.build
src/.config/serene-shell/src/styles/: index.scss  meson.build
src/.config/serene-shell/src/styles/widgets/: Bar.scss
src/.config/serene-shell/src/vala/: meson.build
src/.config/serene-shell/src/vala/modules/: Audio.vala  Battery.vala  Cava.vala  Client.vala  Clock.vala  Mpris.vala  Player.vala  QuickSettings.vala  Tray.vala  Workspace.vala  Workspaces.vala  meson.build
src/.config/serene-shell/src/vala/widgets/: BackgroundPlayer.vala  Bar.vala  meson.build
walker/: config.toml
wlogout/: layout  style.css
(+222 files in other folders)
